--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- 设置use-scalabel=0用于移动端禁止用户缩放 -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <!-- 访问图片出现403报错的解决方法：不建议在非学习环境中使用，因为易造成侵权 -->
